@@ -11,6 +11,7 @@
           * geda_toggle_action_get_active
           * geda_toggle_action_set_active
           * geda_toggle_action_get_draw_as_radio
+          * geda_toggle_action_set_draw_as_radio
 
 2020-03-03 Wiley E. Hill <wileyhill@gmail.com>
 
